fix a minor spacing issue in the komorebi stack widget

--- a/windows/yasb/styles.css
+++ b/windows/yasb/styles.css
@@ -270,11 +270,12 @@
 .komorebi-stack .window {
     background-color: transparent;
     border: none;
-    padding: 2px 0px;
+    margin: 3px 3px 3px 0px;
 }
 
 .komorebi-stack .window .icon {
-    margin-right: 3px;
+    margin-left: -1px;
+    margin-right: 4px;
 }
 
 .komorebi-stack .label {
@@ -282,7 +283,6 @@
     color: var(--mauve);
     border: var(--widgetBorder);
     border-radius: var(--radius);
-    margin: 2px 1px 2px 0;
 }
 
 .komorebi-stack .label:hover {
